cdap-ui/app/cdap/components/PipelineSummary/RunsHistoryGraph/RunsHistoryGraph.scss
/*
 * Copyright © 2017 Cask Data, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
*/

@import '../StickyTableHeader.scss';
@import '~styles/variables.scss';

$legend_font_color: black;
$container_border_color: lightgray;

.runs-history-graph {
  .run-history-legend-container {
    &.rv-discrete-color-legend.horizontal {
      .rv-discrete-color-legend-item {
        display: inline-block;
        margin: 0 20px;
        .rv-discrete-color-legend-item__color {
          display: inline-block;
          width: 10px;
          height: 10px;
          margin: 0 5px;
          border-radius: 50%;
        }
        .rv-discrete-color-legend-item__title {
          color: $legend_font_color;
        }
        &:nth-child(3) {
          .rv-discrete-color-legend-item__color {
            background: transparent;
            border: 1px solid $blue-02;
          }
        }
      }
    }
  }
  .rv-xy-plot {
    .rv-xy-plot__inner {
      .rv-xy-plot__series.rv-xy-plot__series--mark {
        circle {
          cursor: pointer;
        }
      }
    }
  }
  .x-axis-title {
    position: absolute;
    bottom: -20px;
    right: 0;
  }
  .y-axis-title {
    position: absolute;
    right: -60px;
    transform: rotate(-90deg);
    top: 40%;
  }

  @include stickyheader;

}

